force-app/main/default/objects/Nepal_Price_List__c/Nepal_Price_List__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Nepal Price List</label>
</CustomObject>