force-app/main/default/objects/Nepal_Price_List__c/fields/Fine__c.field-meta.xml
<CustomField>
    <fullName>Fine__c</fullName>
    <label>קנס לא תקין</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>