force-app/main/default/objects/Nepal_Price_List__c/fields/Max_Period__c.field-meta.xml
<CustomField>
    <fullName>Max_Period__c</fullName>
    <label>מקסימום תקופה</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>