force-app/main/default/objects/Nepal_Price_List__c/fields/Min_Period__c.field-meta.xml
<CustomField>
    <fullName>Min_Period__c</fullName>
    <label>מינימום תקופה</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>