force-app/main/default/objects/Nepal_Price_List__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <label>מחיר</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>